# instagram-saved-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: claude_desktop_config.json
installers/: install_windows.bat
src/instagram_saved_mcp/: __init__.py  __main__.py  cache.py  cli.py  config.py  enricher.py  parser.py  server.py  transcriber.py
tests/: test_cache.py  test_enricher.py  test_parser.py
